app/assets/stylesheets/components/_card.scss
.card-img-top {
  background-color: #fae1df52;
  height: 70%;
  object-fit: cover;
  margin: auto;
  position: relative;
}

.booking-card {
  display: flex;
  width: 100%;
  border: 1px solid #00000033;
  box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.37);
  border-radius: 8px;
  background-color: #ffffff8f;
}

.booking-card-content {
  display: flex;
  flex-direction: column;
  justify-content: center;
  margin-left: 30px;
}

.booking-card-img {
  width: 40%;
  margin: 8px;
  border-radius: 8px;
}

.card-room {
  position: relative;
  overflow: hidden;
  background: white;
  box-shadow: 0 0 15px rgba(0,0,0,0.2);
  margin-top: 16px;
  text-decoration: none;
  border-radius: 8px;
}

.card-room > img {
  object-fit: cover;
  margin: auto;
  width: 460px;
  height: 260px;
}

.card-room h2 {
  font-size: 16px;
  font-weight: bold;
  margin: 0;
}

.card-room p {
  font-size: 12px;
  opacity: .7;
  margin: 0;
}


.card-room .card-room-infos {
  padding: 8px;
  display: flex;
  justify-content: space-between;
  align-items: flex-end;
  position: relative;
  color: black;
}

.card-room-infos .card-room-user {
  position: absolute;
  right: 16px;
  top: -20px;
  width: 40px;
}

.card-deck {
  width: 100%;
  display: flex;
  flex-wrap: wrap;
  min-height: 100v;
  justify-content: center;
  gap: 40px;
}

.card-room-pricing {
  bottom: 0;
  right: 16px;
}

#map {
  height: 300px;
  width: 600px;
  margin: 32px;
  text-align: center;
}

.card-footer {
  position: absolute;
  right: 4px;
  top: 4px;
}

